# news_agent

./: .env.example  .gitignore  EKG_JSON_IMPORT.md  EKG_QUICKSTART.md  EKG_VISUALIZATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
demos/: ekg_demo.py  ekg_import_json.py  ekg_visualization.py  ekg_web_demo.py  example_data.json  view_ekg_data.py
docs/: EKG_DEMO.md  EKG_GUIDE.md  EKG_TECHNICAL.md  api_spec.md  architecture.md  requirements.md
scripts/: setup_db.py
src/: __init__.py
src/agents/: __init__.py  base.py  monitor.py  narrative.py  source_hunter.py  synthesizer.py  verifier.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  investigation.py  taas.py
src/database/: __init__.py  connection.py
src/ekg/: __init__.py  graph_ops.py  models.py  repository.py
src/orchestrator/: __init__.py  investigation.py
src/utils/: __init__.py  config.py  logger.py
