[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-gt"
version = "0.1.0"
description = "NEWS GT - AI 新闻真相认知引擎"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEWS GT Team"}
]
keywords = [
    "news",
    "fact-checking",
    "ai",
    "knowledge-graph",
    "misinformation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
# AI/LLM支持
ai = [
    "openai>=1.10.0",
    "anthropic>=0.8.1",
]

# PostgreSQL支持
postgres = [
    "psycopg2-binary>=2.9.9",
]

# 异步任务队列
async = [
    "celery>=5.3.6",
    "redis>=5.0.1",
]

# 开发工具
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/news-gt"
Documentation = "https://github.com/your-org/news-gt/docs"
Repository = "https://github.com/your-org/news-gt"
Issues = "https://github.com/your-org/news-gt/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
